# market_researcher

./: .gitignore  README.md  pyproject.toml
market_researcher/: run.py  schemas.py
market_researcher/configs/: deployment.json
